# django-tasks-inprocess

./: .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/django_tasks_inprocess/: __init__.py  backend.py
tests/: settings.py  tasks.py  test_backend.py
